Fixed overflow bug

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -19,6 +19,7 @@ body
     flex-direction: column;
     position: relative;
     background: radial-gradient(hsl(273, 75%, 66%),hsl(240, 73%, 65%));
+    overflow: hidden;
     #background-image-1-mobile
     {
         height: 125px;
